Fix broken layout of paper show navigation bar at mobile page

--- a/app/components/paperShow/paperShow.scss
+++ b/app/components/paperShow/paperShow.scss
@@ -81,36 +81,6 @@
       transition: $button-hover-transition;
     }
   }
-
-  .pdfOrSourceButtonWrapper {
-    @extend %navbar-button;
-    border: solid 1px $royal_blue1;
-    background-color: transparent;
-    text-align: center;
-    font-size: 14px;
-    font-weight: bold;
-    color: $royal_blue4;
-
-    &:hover {
-      background-color: rgba(96, 150, 255, 0.1);
-      transition: $button-hover-transition;
-    }
-  }
-
-  .sourceIcon {
-    display: inline-block;
-    vertical-align: top;
-    width: 16px;
-    height: 14.3px;
-    margin-right: 8px;
-
-    svg {
-      display: inline-block;
-      vertical-align: top;
-      width: 100%;
-      height: 100%;
-    }
-  }
 }
 
 .referencesTitle {
@@ -335,13 +305,23 @@
 
 @media (max-width : $tablet-width) {
   .navContainer {
+    display: flex;
     width: 100%;
+    justify-content: space-between;
+
+    .navigatorItem {
+      margin-right: 0;
+    }
 
     .citationButton {
       display: none;
     }
 
     .dropdownButtonBox {
+      display: none;
+    }
+
+    .omitItem {
       display: none;
     }
   }
@@ -356,12 +336,5 @@
 
   .container {
     width: 100%
-  }
-}
-
-@media (max-width : $mobile-width) {
-  .navContainer {
-    width: 100%;
-    overflow: hidden;
   }
 }
